--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -169,6 +169,8 @@
     <string name="loading">รอสักครู่</string>
     <string name="you_want_to_leave_this_account">คุณต้องการออกจากบัญชีนี้?</string>
     <string name="please_set_the_task_time_first">โปรดตั้งเวลาการทำงานก่อน</string>
+    <string name="The_work_hasbeen_synced_to_your_google_dive_account">ซิงค์งานเข้ากับบัญชี google ไดฟ์เรียบร้อย</string>
+    <string name="Failed_to_sync_tasks_to_your_google_dive_account">ซิงค์งานเข้ากับบัญชี google ไดฟ์ของคุณไม่สำเร็จ</string>
 
 
 </resources>
