-edit language menu

--- a/app/src/main/res/values-b+fil/strings.xml
+++ b/app/src/main/res/values-b+fil/strings.xml
@@ -190,7 +190,7 @@
     <string name="Failed_to_sync_tasks_to_your_google_dive_account">Nabigong i-sync ang mga gawain sa iyong google dive account.</string>
     <string name="Tasks">Mga gawain</string>
     <string name="Calendar">Kalendaryo</string>
-    <string name="Statistics">Mga istatistika</string>
+    <string name="Statistics">Estatistika</string>
     <string name="Menu">Menu</string>
 
 </resources>
