--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -187,6 +187,7 @@
     <string name="Not_synced">ยังไม่ได้ซิงค์ข้อมูล</string>
     <string name="upgrade_pro">อัพเกรดเป็น Pro</string>
     <string name="syncing">กำลังซิงค์ข้อมูล</string>
-
+    <string name="Select">เลือก</string>
+    <string name="Select_Language">เลือกภาษา</string>
 
 </resources>
