--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -153,4 +153,5 @@
     <string name="Menu">Menú</string>
     <string name="Select">Seleccione</string>
     <string name="Select_Language">Seleccione el idioma</string>
+    <string name="It_is_recommended_to_turn_on_automatic_backup">Se recomienda activar la copia de seguridad automática.</string>
 </resources>
