--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,7 +107,7 @@
     <string name="the_category_has_been_deleted">The category has been deleted</string>
     <string name="show">Show</string>
     <string name="hide">Hide</string>
-    <string name="edit">Edit</string>
+    <string name="Edit">Edit</string>
 
 
     <!--HistoryActivity-->
@@ -188,7 +188,7 @@
     <string name="quit">Quit</string>
     <string name="do_not_have">No</string>
     <string name="have">Have</string>
-    <string name="add">Add</string>
+    <string name="Add">Add</string>
     <string name="alert_please_upgrade_premium_version">Please upgrade to premium version.</string>
 
     <string name="The_work_hasbeen_synced_to_your_google_dive_account">The work has been synced to your google dive account.</string>
