-edit design app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="web_client_id" translatable="false">580610190420-ssmr98lb3rme0opoale7r16bi0oqn1gc.apps.googleusercontent.com</string>
 
     <!--To Do List Tasks & Planner จดบันทึกเเละวางเเผนเเต่ละวันของคุณอย่างง่าย -->
-    <string name="app_name" translatable="false">To Do List</string>
+    <string name="app_name" translatable="false">GThings To Do</string>
     <string name="no">No</string>
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
