--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -197,5 +197,7 @@
     <string name="Select">Sélectionner</string>
     <string name="Select_Language">Choisir la langue</string>
     <string name="It_is_recommended_to_turn_on_automatic_backup">Il est recommandé d\'activer la sauvegarde automatique.</string>
+    <string name="Successfully_added_to_favorites">Ajouté avec succès aux favoris</string>
+    <string name="Location">Emplacement</string>
 
 </resources>
