--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -192,5 +192,6 @@
     <string name="It_is_recommended_to_turn_on_automatic_backup">แนะนำเปิดการสำรองข้อมูลอัตโนมัติ</string>
     <string name="Successfully_added_to_favorites">เพิ่มในรายการโปรดเรียบร้อย</string>
     <string name="Location">โลเคชั่น</string>
+    <string name="Every_morning_starts_a_new_page_in_your_story">ทุกเช้าเริ่มหน้าใหม่ในเรื่องราวของคุณ!</string>
 
 </resources>
