--- a/app/src/main/res/values-b+fil/strings.xml
+++ b/app/src/main/res/values-b+fil/strings.xml
@@ -197,4 +197,7 @@
     <string name="It_is_recommended_to_turn_on_automatic_backup">Inirerekomenda na i-on ang awtomatikong pag-backup.</string>
     <string name="Successfully_added_to_favorites">Matagumpay na naidagdag sa mga paborito</string>
     <string name="Location">Lokasyon</string>
+    <string name="Every_morning_starts_a_new_page_in_your_story">Tuwing umaga ay nagsisimula ng bagong pahina sa iyong kwento!</string>
+    <string name="Please_check_your_network">Pakisuri ang iyong network.</string>
+    <string name="Do_it_in_yourself">Gawin mo sa sarili mo!</string>
 </resources>
