--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,5 +214,7 @@
     <string name="Successfully_added_to_favorites">Successfully added to favorites</string>
     <string name="Location">Location</string>
     <string name="Every_morning_starts_a_new_page_in_your_story">Every morning starts a new page in your story!</string>
+    <string name="Please_check_your_network">Please check your network.</string>
+    <string name="Do_it_in_yourself">Do it in yourself!</string>
 
 </resources>
