--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -202,5 +202,7 @@
     <string name="Every_morning_starts_a_new_page_in_your_story">Chaque matin commence une nouvelle page dans votre histoire!</string>
     <string name="Please_check_your_network">Veuillez vérifier votre réseau.</string>
     <string name="Do_it_in_yourself">Fais le en toi!</string>
+    <string name="Record_your_to_do_list_here">Enregistrer votre liste de tâches ici.</string>
+    <string name="Manage_your_lifestyle_to_do_categories_here">Gérez vos catégories de tâches lifestyle ici.</string>
 
 </resources>
